--- a/week1/selecting_elements/index2.html
+++ b/week1/selecting_elements/index2.html
@@ -10,9 +10,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script>
-           function addText(text) {
-           document.getElementById('heading').innerHTML = "This was inserted with JavaScript"
-           }
+         let h1Node = document.createElement('h1');
+         hiNode.id = 'heading';
+         hiNode.textContent = "This was inserted with JavaScript";
+         document.body.appendChild(hiNode);
         </script>
     </head>
     
