--- a/week1/selecting_elements/index2.html
+++ b/week1/selecting_elements/index2.html
@@ -10,10 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script>
-         let h1Node = document.createElement('h1');
-         hiNode.id = 'heading';
-         hiNode.textContent = "This was inserted with JavaScript";
-         document.body.appendChild(hiNode);
+     document.getElementById("yourH1_element_Id").innerHTML = "yourTextHere";
         </script>
     </head>
     
