--- a/week1/selecting_elements/index2.html
+++ b/week1/selecting_elements/index2.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script>
-     document.getElementById("yourH1_element_Id").innerHTML = "yourTextHere";
+     document.getElementById("heading").innerHTML = "yourTextHere";
         </script>
     </head>
     
