--- a/week1/selecting_elements/index2.html
+++ b/week1/selecting_elements/index2.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script>
-     lefunction newContent() {
+     function newContent() {
       document.open();
       document.write("<h1>Out with the old, in with the new!</h1>");
       document.close();
