--- a/week1/selecting_elements/index2.html
+++ b/week1/selecting_elements/index2.html
@@ -12,7 +12,7 @@
         <script>
      function newContent() {
       document.open();
-      document.write("<h1>Out with the old, in with the new!</h1>");
+      document.write("<h1>This text was inserted with JavaScript!</h1>");
       document.close();
     }
         </script>
