--- a/week1/selecting_elements/index2.html
+++ b/week1/selecting_elements/index2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "utf-8"/>
         
-        <script type = "text/javascript" src = "index2.js" ></script>
+        <script src = "index2.js" ></script>
         
         <title>fsw-110</title>
 
