--- a/week3/styles/styles.html
+++ b/week3/styles/styles.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="styles.js"></script>
         <link rel="stylesheet" href="styles.css">
-        <title>Document</title>
+        <title>styles</title>
     </head>
     
     <body class="border"> 
