--- a/week5/modify element/mod.html
+++ b/week5/modify element/mod.html
@@ -14,7 +14,7 @@
 <body>
     <form id="formInfo">
         <br><br>
-        <label for="fullName">Full Name</label>
+        <label for="fullName">Movement Name</label>
         <br>
         <input type="text" name="fullName">
         <br><br><br>
@@ -22,7 +22,7 @@
         <br>
         <input type="text" name="email">
         <br><br><br>
-        <label for="age">Age</label>
+        <label for="age">Number of Members</label>
         <br>
         <input type="number" name="age">
         <br><br>
