--- a/week7/index.html
+++ b/week7/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>To-Do List Capstone</title>
+    <title>To-Do List</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Architects+Daughter&family=Babylonica&family=Berkshire+Swash&family=Caveat:wght@400;500;600;700&family=Cinzel:wght@400;500;600;700;800;900&family=Cookie&family=Courgette&family=Dancing+Script:wght@400;500;600;700&family=Gloria+Hallelujah&family=Great+Vibes&family=Handlee&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Indie+Flower&family=Ingrid+Darling&family=Kalam:wght@300;400;700&family=Kaushan+Script&family=Lavishly+Yours&family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Meie+Script&family=MonteCarlo&family=Ms+Madi&family=My+Soul&family=Neucha&family=Pacifico&family=Parisienne&family=Patrick+Hand&family=Permanent+Marker&family=Sacramento&family=Satisfy&family=Send+Flowers&family=Shadows+Into+Light&family=Square+Peg&family=Tangerine:wght@400;700&family=Tapestry&family=Updock&family=Water+Brush&family=Whisper&family=Yellowtail&display=swap" rel="stylesheet">
